# django-admin-dracula

./: .gitignore  INSTALL.md  README.md  THEMES.md  hello.py  justfile  manage.py  pyproject.toml
django_admin_dracula/static/admin/css/: base.css  changelists.css  dark_mode.css  nav_sidebar.css
django_admin_dracula/templates/admin/: base.html
dracula/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_admin_theme.py
tests/example/: apps.py  settings.py
